# block-monorepo

./: .gitignore  CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.json  tsconfig.json  turbo.json
apps/backend/: .env.example  package.json  tsconfig.json
apps/extension/: .env.example  package.json  tsconfig.json  wxt.config.ts
apps/mobile/: .env.example  babel.config.js  metro.config.js  nativewind.config.js  package.json  tsconfig.json  (+2 more)
src/back/programs/data-marketplace/: Cargo.toml
src/back/programs/data-marketplace/src/: errors.rs  lib.rs  state.rs
src/back/programs/data-marketplace/src/instructions/: mod.rs
src/back/programs/data-marketplace/src/instructions/authority/: initialize.rs  mod.rs  update_merkle_root.rs
src/back/programs/data-marketplace/src/instructions/buyer/: mod.rs  purchase_data_pass.rs
src/back/programs/data-marketplace/src/instructions/seller/: claim_revenue.rs  create_listing.rs  mod.rs  remove_listing.rs  update_listing.rs
src/back/programs/data-marketplace/tests/: authority.test.ts  buyer-behavior.test.ts  edge-cases.test.ts  error-cases.test.ts  merkle-proof.test.ts  normal-flow.test.ts  revenue-tracking.test.ts  seller-behavior.test.ts
src/back/programs/data-marketplace/tests/utils/: index.ts  test-helpers.ts
src/back/programs/escrow/: Cargo.toml  package.json  tsconfig.json
src/back/programs/escrow/src/: errors.rs  lib.rs  state.rs
src/back/programs/escrow/src/instructions/: claim.rs  create.rs  forfeit.rs  mod.rs
src/back/programs/escrow/tests/: escrow.ts  litesvm_tests.rs
(+238 files in other folders)
