[package]
name = "escrow"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
anchor-debug = []
custom-panic = []
litesvm = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["event-cpi"] }
anchor-spl = "0.31.1"

[dev-dependencies]
litesvm = "0.6.1"
solana-sdk = "2.2.1"